--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="carousel-wrapper">
         <button class="carousel-btn left" onclick="changeSlide(-1)">&#10094;</button>
         <div class="carousel-slide">
-          <img id="carousel-image" src="./img/campo.png" alt="Imagem da galeria" />
+          <img id="carousel-image" src="./img/café1.webp" alt="Imagem da galeria" />
         </div>
         <button class="carousel-btn right" onclick="changeSlide(1)">&#10095;</button>
       </div>
