--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <h2>Vídeo: A Cadeia Produtiva do Malte</h2>
       <div class="video-container">
         <video controls>
-          <source src="./img/cadeia produtiva.mp4" type="video/mp4" />
+          <source src="./img/https://youtu.be/Zu-AjL0REhw?si=uCG7zW5el_UuXSBX" type="video/mp4" />
           Seu navegador não suporta vídeo.
         </video>
       </div>
