--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo">
       <img src="./img/logo.png" alt="Logo Agrinho" />
     </div>
-    <div class="site-title">Do Campo ao Copo: A Jornada do Malte em Guarapuava</div>
+    <div class="site-title">Do Grão a Xícara: A jornada do grão ao pó de café</div>
     <nav class="navbar" id="navbar">
       <button class="hamburger" id="menu-toggle" aria-label="Abrir menu" aria-controls="nav-links"
         aria-expanded="false">☰</button>
