--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <footer>
     <p>&copy; 2025 - Concurso Agrinho | Colégio Estadual Professor Pedro Carli</p>
     <div class="social-links">
-      <a href="https://github-removebg-preview.png" target="_blank"><img src="./img/github-removebg-preview.png" alt="GitHub" class="social-icon" /></a>
-      <a href="https://instagram-removebg-preview.png" target="_blank"><img src="./img/instagram-removebg-preview.png" alt="Instagram" class="social-icon" /></a>
+      <a href="https://github.com/schonlopes" target="_blank"><img src="./img/github-removebg-preview.png" alt="GitHub" class="social-icon" /></a>
+      <a href="https://www.instagram.com/schonlopes" target="_blank"><img src="./img/instagram-removebg-preview.png" alt="Instagram" class="social-icon" /></a>
     </div>
   </footer>
 
